[package]
name = "fzero"
version = "0.2.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[lib]
name = "fzero_gen"
path = "src/lib.rs"

[[bin]]
name = "fzero_cli"
path = "src/cli.rs"
