[package]
name = "fzero_gen"
version = "0.2.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>", "Michael Rodler <m@mrodler.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
hashbrown = "*"


[lib]
name = "fzero_gen"
path = "src/lib.rs"

[[bin]]
name = "fzero_cli"
path = "src/cli.rs"
