[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"

[build-dependencies]
fzero_gen = { path = "../../fzero_gen/" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
